# neynxx

./: .gitmodules  CMakeLists.txt  README.md
neynxx/: config.h.in  neynxx.cpp  neynxx.h
src/: config.h.in  neyn  server.cpp  server.h
src/neyn/: config.h.in  filer.cpp  filer.h  neyn.h  print.cpp  print.h  server.cpp  server.h
stage/: main.cpp
test/: stage.cpp  tests.cpp
